--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <div class="banner" >
       <div class="navbar">
         <div class="navbar-content">
-          <ul>
+          <ul class="navtop">
             <li class="logo">Seja Bem Vindo</li>
+
+            <a class="buttons" href="https://www.tojan.com.br">
+              Web Site
+            </a>
           </ul>
 
           <ul class="nav">
             <li>
-              <a href="mailto:tojanexperience@gmail.com?Subject=Oi, vim pelo cartão de visita">
-                <i class="fas fa-globe"></i>
-                <span>Web Site</span>
-              </a>
             </li>
             <li>
               <a href="mailto:tojanexperience@gmail.com?Subject=Oi, vim pelo cartão de visita">
@@ -55,6 +55,11 @@
           </ul>
         </div>
       </div>
+      </a>
+
+      <a class="button-absolute" href="https://www.tojan.com.br">
+        Web Site
+      </a>
 
       <div class="content">
         <!-- <div class="main"> -->
@@ -89,7 +94,7 @@
               align-items: center;
               justify-content: center;
               position: absolute; 
-              right: 20px;
+              right: 100px;
               bottom: 20px;
               margin-left: 8px;
             ">
@@ -97,6 +102,7 @@
             </button>
 
           </model-viewer>
+        
        
       </div>
     </div>
