--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         <div class="navbar-content">
           <ul class="navtop">
             <li class="logo">Seja Bem Vindo</li>
-
-            <a class="buttons" href="https://www.tojan.com.br">
-              Web Site
-            </a>
           </ul>
 
           <ul class="nav">
-            <li>
+            <li> <a href="https://www.tojan.com.br/">
+              <i class="fas fa-globe-asia"></i>
+              <span>Web site</span>
+            </a>
             </li>
             <li>
               <a href="mailto:tojanexperience@gmail.com?Subject=Oi, vim pelo cartão de visita">
@@ -57,9 +56,9 @@
       </div>
       </a>
 
-      <a class="button-absolute" href="https://www.tojan.com.br">
+    <!--  <a class="btn" href="https://www.tojan.com.br">
         Web Site
-      </a>
+      </a> -->
 
       <div class="content">
         <!-- <div class="main"> -->
@@ -85,7 +84,8 @@
               text-transform: uppercase;
               font-weight: 500;
               width: 100%;
-              max-width: 200px;
+              height: 72px;
+              max-width: calc(50% - 30px);
               transition: all 0.2s ease-in-out;
               font-family: var(--title-font);
               font-size: 0.775rem;
@@ -94,9 +94,9 @@
               align-items: center;
               justify-content: center;
               position: absolute; 
-              right: 100px;
+              right: 20px;
               bottom: 20px;
-              margin-left: 8px;
+              right: 30%;
             ">
               REALIDADE AUMENTADA
             </button>
